fix: fonts on safari

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 @font-face {
     font-family: gunplay;
-    src: url("../fonts/gunplay.regular.woff2") format("woff2");
+    src: url("../fonts/gunplay.regular.woff") format("woff");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
 }
 html, body {
     font-family: gunplay;
